<?xml version="1.0"?>
<package format="2">
  <name>caato_slam</name>
  <version>0.0.0</version>
  <description>
    The caato_slam package provides roslaunch scripts for starting the SLAM
  </description>
  <license>Apache 2.0</license>
  <author email="eric.dongxx@gmail.com">Eric Dong</author>
  <maintainer email="eric.dongxx@gmail.com">Eric Dong</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>caato_bringup</exec_depend>
  <exec_depend>hector_slam</exec_depend>
</package>
