<package>
  <name>rviz_atc_plugins</name>
  <version>0.11.0</version>
  <description>
     Plugins to control Caato ATC remotely (thru camera frame)
  </description>
  <maintainer email="timothy_tan@tech.gov.sg">Timothy Tan</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rviz_atc_plugins</url>
  <author>Timothy Tan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>atc_utils</build_depend>
  <build_depend>atc_msgs</build_depend>
  <build_depend>plc_modbus_node</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
